Fixed layout for upload component when right side is collapsed... was occluding the auto assignment button

--- a/FrontEnd/src/app/home/view/upload/upload.component.scss
+++ b/FrontEnd/src/app/home/view/upload/upload.component.scss
@@ -37,7 +37,7 @@
 	width: 30%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 10%;
+	margin-top: 5vh;
 	opacity: 50%;
 }
 
